@@ -1,5 +1,7 @@
 Changes for Perl programming language extension Parse-CPAN-Meta
 
+      - Protected tests from user PERL_YAML/JSON_BACKEND
+
 1.4403 Sun Apr 01 2012
       - Bumped prereqs: JSON::PP to 2.27200 and CPAN::Meta::YAML to 0.008
 
